refactor: разбить тесты на составляющие для проверки одной, конкретной ситуации